# rfp-ai

./: _rfp_response.txt  pyproject.toml  rfp_agents.py  rfp_app.py  rfp_crew.py  rfp_model.py  rfp_tasks.py
local_llm/: custom_model.sh  mistral_modelfile
